tests/spec/format/snapshots/struct_pub_fields.snap
---
source: tests/spec/format/mod.rs
description: "struct Point { pub x: int, pub y: int }"
---
struct Point {
  pub x: int,
  pub y: int,
}
