tests/spec/format/snapshots/struct_public.snap
---
source: tests/spec/format/mod.rs
description: "pub struct Point { x: int, y: int }"
---
pub struct Point { x: int, y: int }
