tests/spec/format/snapshots/struct_tuple.snap
---
source: tests/spec/format/mod.rs
description: pub struct Format(int)
---
pub struct Format(int)
