tests/spec/format/snapshots/struct_with_fields.snap
---
source: tests/spec/format/mod.rs
description: "struct Point { x: int, y: int }"
---
struct Point { x: int, y: int }
