tests/spec/format/snapshots/struct_with_generics.snap
---
source: tests/spec/format/mod.rs
description: "struct Container<T> { value: T }"
---
struct Container<T> { value: T }
