tests/spec/format/snapshots/task_launch.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { task do_work() }"
---
fn test() {
  task do_work()
}
