tests/spec/format/snapshots/try_block_comment_after.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn foo() {
    try {}
    // comment
  }
---
fn foo() {
  try {}
  // comment
}
