tests/spec/format/snapshots/type_alias_function.snap
---
source: tests/spec/format/mod.rs
description: "type Handler = fn(int, string) -> bool"
---
type Handler = fn(int, string) -> bool
