tests/spec/format/snapshots/type_alias_function_without_return.snap
---
source: tests/spec/format/mod.rs
description: "type Handler = fn(int, string)"
---
type Handler = fn(int, string)
