tests/spec/format/snapshots/type_alias_generic.snap
---
source: tests/spec/format/mod.rs
description: type Result<T> = Option<T>
---
type Result<T> = Option<T>
